# anatomical-neural-fm

./: .gitignore  README.md  d.md  m.json  pyproject.toml  t.sh
configs/: phase2_local.json
docker/: runpod-data-build.Dockerfile
docs/: anatomical_transfer_demo_decision.md  anatomy_transfer_evidence_summary.json  anatomy_transfer_evidence_summary.md  behavior_cache_build_shard00.md  behavior_cache_build_shard01.md  behavior_cache_build_shard02.md  behavior_cache_build_shard03.md  behavior_cache_preflight.json  behavior_cache_preflight.md  cell_type_prior_target_control_gate.json  cell_type_prior_target_control_gate.md  cloud_phase3_5_results.md  compact_matched_cache_next_run.md  compact_support80_best6_s3_audit.md  compact_support80_best6_shard0_gpu_results.md  composite_behavior_recording_failure_decomposition.json  composite_behavior_recording_failure_decomposition.md  composite_behavior_response_extreme_family_gate.json  composite_behavior_response_extreme_family_gate.md  composite_behavior_response_extreme_family_gate_projected_hdf5.json  composite_behavior_response_extreme_family_gate_projected_hdf5.md  composite_behavior_response_extreme_family_gate_projected_hdf5_seed_1.json  composite_behavior_response_extreme_family_gate_projected_hdf5_seed_1.md  composite_behavior_response_extreme_family_gate_projected_hdf5_seed_2.json  composite_behavior_response_extreme_family_gate_projected_hdf5_seed_2.md  composite_behavior_response_extreme_family_gate_projected_hdf5_seed_3.json  composite_behavior_response_extreme_family_gate_projected_hdf5_seed_3.md  (+428 more)
tests/: conftest.py  (+106 more)
(+239 files in other folders)
