[project]
name = "anatomical-neural-fm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "abc-atlas-access",
    "boto3>=1.40.0",
    "einops>=0.6,<0.7",
    "hydra-core>=1.3.2",
    "iblatlas>=1.0.0",
    "jaxtyping>=0.3.9",
    "numpy>=2.4.4",
    "one-api>=3.4.1",
    "pandas>=2.3.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "rich>=15.0.0",
    "temporaldata>=0.1.4",
    "torch>=2.4,<2.6",
    "torch-brain>=0.1.2",
    "torchmetrics>=1.9.0",
    "torchtyping>=0.1.5",
    "tqdm>=4.67.3",
    "wandb>=0.27.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
abc-atlas-access = { git = "https://github.com/AllenInstitute/abc_atlas_access" }
